# image-editor

./: .gitignore  CMakeLists.txt  README.md  buildfrontend.sh  buildnrun.sh  inittest.sh  test.sh
frontend/: package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.jsx  api.js  index.css  index.jsx
frontend/src/components/ControlPanel/: ControlPanel.css  ControlPanel.jsx
frontend/src/components/Cropper/: Cropper.css  Cropper.jsx  cropImage.js
frontend/src/components/ImageEditor/: ImageEditor.css  ImageEditor.jsx
frontend/src/components/Toolbar/: Toolbar.css  Toolbar.jsx
src/admin/: admin.cpp
src/client/: client.cpp
src/client/ArgumentParser/: ArgumentParser.cpp  ArgumentParser.h
src/client/ImageHandler/: ImageHandler.cpp  ImageHandler.h
src/client/RequestHandler/: RequestHandler.cpp  RequestHandler.h
src/server/: server.cpp
src/server/ArgumentParser/: ArgParser.cpp  ArgParser.h
src/server/ConnectionHandler/: ConnectionHandler.cpp  ConnectionHandler.h
src/server/Filters/: Filters.cpp  Filters.h
src/server/ImageEditor/: ImageEditor.cpp  ImageEditor.h
src/server/SocketHandler/: SocketHandler.cpp  SocketHandler.h
src/server/ThreadHandler/: ThreadHandler.cpp  ThreadHandler.h
src/server/WebServer/: WebServer.cpp  WebServer.h
src/utils/: OSUtils.cpp  OSUtils.h  constants.cpp  types.h
src/utils/packets/: PacketReceiver.cpp  PacketReceiver.h  PacketSender.cpp  PacketSender.h
